--- a/cpusched1/cpusched1.vcxproj.filters
+++ b/cpusched1/cpusched1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="cpu.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="memory.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oslabs.h">
