--- a/cpusched1/cpusched1.vcxproj.filters
+++ b/cpusched1/cpusched1.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="memory.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="disk.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="virtual.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="oslabs.h">
